# libfaults

./: AUTHORS  CMakeLists.txt  README.md
doc/: CONFIGURATION.md  GETTING_STARTED.md
src/: CMakeLists.txt
src/include/: calls.h  configuration.h  libfaults.h  logging.h
src/libfaults/: accept.c  bind.c  configuration.c  connect.c  libfaults.c  listen.c  logging.c  read.c  setsockopt.c  socket.c  write.c
